--- a/index.html
+++ b/index.html
@@ -12,35 +12,35 @@
 </head>
 <body>
 	<div id="slides">
-		TEMPLATE
-		<button onclick="previousSlide()">Previous Slide</button>
-		<button onclick="nextSlide()">Next Slide</button>
-		<button onclick="zoomInImage()">zoom in</button>
-		<button onclick="zoomOutImage()">zoom out</button>
-		<audio controls id="applause-audio">
+<!-- 		<button onclick="previousSlide()">&lt;</button>
+		<button onclick="nextSlide()">&gt;</button> -->
+<!-- 		<button onclick="zoomInImage()">zoom in</button>
+		<button onclick="zoomOutImage()">zoom out</button> -->
+		<audio id="applause-audio">
 			<source src="audio/applause.mp3" type="audio/mpeg">
 		</audio>
-		<audio controls id="rimshot-audio">
+		<audio id="rimshot-audio">
 			<source src="audio/rimshot.mp3" type="audio/mpeg">
 		</audio>
 		<div class="slide" id="slide-1">
-			<button onclick="applausePlay()">Play Applause</button>
-			<button onclick="rimshotPlay()">Play rimshot</button>
-			
-			<h1>Swipe</h1>
-			<h2 id='direction'></h2>
 		</div>
 		<div class="slide" id="slide-2">
-			<h1>SLIDE 2</h1>
-			<img class="zoomable" src="img/huffpost-logo.jpg"></img>
 		</div>
 		<div class="slide" id="slide-3">
-			<h1>SLIDE 3</h1>
-			<img class="zoomable" src="img/mystical/unicorn.jpg"></img>
 		</div>
 		<div class="slide" id="slide-4">
-			<h1>SLIDE 4</h1>
-			<img class="zoomable" src="img/mystical/charmander.png"></img>
+		</div>
+		<div class="slide" id="slide-5">
+		</div>
+		<div class="slide" id="slide-6">
+		</div>
+		<div class="slide" id="slide-7">
+		</div>
+		<div class="slide" id="slide-8">
+		</div>
+		<div class="slide" id="slide-9">
+		</div>
+		<div class="slide" id="slide-10">
 		</div>
 
 	</div>
